# geektray

./: Cargo.toml  Config.toml  README.md  build.rs  config.json  config.toml
.github/workflows/: ci.yml  release.yml
examples/: dbus_test.rs  list_keysyms.rs  tray_icon_test.rs  xcb_cairo_test.rs
geektray/: Cargo.toml  config.toml  config.yml
geektray/src/: app.rs  command.rs  config.rs  hotkey.rs  main.rs  tray_container.rs  tray_item.rs  tray_manager.rs  xembed.rs
geektray_shell/: Cargo.toml
geektray_shell/examples/: list_keysyms.rs  tray_icon_test.rs
geektray_shell/src/: geometrics.rs  lib.rs
geektray_shell/src/event/: keyboard.rs  mouse.rs
geektray_shell/src/graphics/: color.rs  text.rs
geektray_shell/src/window/: effect.rs  mod.rs  widget.rs  window.rs
geekytray/: Cargo.toml  config.toml  config.yml
geekytray/src/: app.rs  command.rs  config.rs  hotkey.rs  main.rs  tray_container.rs  tray_item.rs  tray_manager.rs
geekytray_shell/: Cargo.toml  build.rs
geekytray_shell/src/: xkb.rs
geekytray_shell/src/event/: keyboard.rs  mod.rs
geekytray_shell/src/graphics/: render_context.rs
geekytray_shell/src/window/: effect.rs
keytray/: Cargo.toml
keytray/src/: app.rs  command.rs  config.rs  event_loop.rs  hotkey.rs  lib.rs  main.rs  tray_container.rs  tray_item.rs  tray_manager.rs  utils.rs  xembed.rs
keytray_shell/: Cargo.toml
keytray_shell/examples/: list_keysyms.rs  tray_icon_test.rs  xcb_cairo_test.rs
keytray_shell/src/: lib.rs  xkb.rs
keytray_shell/src/event/: control_flow.rs  event_loop.rs  keyboard.rs  mod.rs
keytray_shell/src/graphics/: color.rs  font.rs  geometrics.rs  mod.rs  render_context.rs  text.rs
keytray_shell/src/window/: effect.rs  layout.rs  widget.rs  window.rs
src/: app.rs  atoms.rs  color.rs  command.rs  config.rs  context.rs  dbus.rs  effect.rs  error_handler.rs  event.rs  event_loop.rs  font.rs  fontconfig.rs  geometrics.rs  hotkey.rs  icon.rs  key_mapping.rs  keyboard.rs  layout.rs  lib.rs  main.rs  main_window.rs  paint_context.rs  render_context.rs  styles.rs  task.rs  text.rs  text_renderer.rs  tray.rs  tray_container.rs  tray_embedder.rs  tray_item.rs  tray_manager.rs  tray_window.rs  utils.rs  widget.rs  wiget.rs  window.rs  xembed.rs  xkbcommon.rs  (+1 more)
src/dbus/: connection.rs  message.rs  mod.rs  reader.rs  types.rs  values.rs  writer.rs
src/graphics/: render_context.rs
src/ui/: effect.rs  key_mapping.rs  keyboard.rs  layout.rs  mod.rs  window.rs  xkb.rs
