[package]
name = "keytray"
version = "0.0.0"
authors = ["Shota Nozaki <emonkak@gmail.com>"]
edition = "2018"

[features]
default = ["xlib"]
xlib = []

[dependencies]
cairo-sys-rs = { version = "0.14.9", features = ["xlib"] }
gobject-sys = "0.14"
libdbus-sys = "0.2.2"
nix = "0.23.1"
pango-sys = "0.14"
pangocairo-sys = "0.14"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
x11 = { version = "2.18.2", features = ["xlib"] }

[[example]]
name = "tray_icon_test"

[[example]]
name = "list_keysyms"
