[package]
name = "geektray"
version = "0.0.0"
authors = ["Shota Nozaki <emonkak@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
simple_logger = "2.0"
log = "0.4"
nix = "0.23"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
x11rb = { version = "0.9", features = ["allow-unsafe-code", "composite", "damage", "render", "xkb"] }

[dependencies.geektray_shell]
path = "../geektray_shell"
