[package]
name = "geektray"
description = "A keyboard based freedesktop.org system tray implementation for X11"
license = "MIT"
version = "0.0.0"
authors = ["Shota Nozaki <emonkak@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.1", features = ["derive", "std"], default-features = false }
log = "0.4"
nix = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
simple_logger = "2.0"
x11rb = { version = "0.9", features = ["allow-unsafe-code", "composite", "damage", "render", "xkb"] }

[dev-dependencies]
pretty_assertions = "1.2.1"

[dependencies.geektray_shell]
path = "../geektray_shell"
