[package]
name = "geektray_shell"
version = "0.0.0"
authors = ["Shota Nozaki <emonkak@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.52"
cairo-sys-rs = { version = "0.14.9", features = ["xcb"] }
gobject-sys = "0.14"
log = "0.4"
nix = "0.23.1"
pango-sys = "0.14"
pangocairo-sys = "0.14"
serde = { version = "1.0.133", features = ["derive"] }
x11rb = { version = "0.9", features = ["allow-unsafe-code", "xkb"] }

[build-dependencies]
bindgen = "0.59.2"
pkg-config = "0.3"

[[example]]
name = "tray_icon_test"

[[example]]
name = "list_keysyms"

[[example]]
name = "xcb_cairo_test"
