[package]
name = "geekytray"
description = "A keyboard based freedesktop.org system tray implementation for X11"
license = "MIT"
version = "0.1.0"
authors = ["Shota Nozaki <emonkak@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
nix = "0.23"
pico-args = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "2.0"
toml = "0.5.9"
x11rb = { version = "0.9", features = ["allow-unsafe-code", "composite", "damage", "render", "xkb"] }

[dev-dependencies]
pretty_assertions = "1.2.1"

[dependencies.geekytray_shell]
path = "../geekytray_shell"
